Fix select-container alignment issue in Hlsjs.css

--- a/packages/p2p-media-loader-demo/src/components/players/hlsjs/Hlsjs.css
+++ b/packages/p2p-media-loader-demo/src/components/players/hlsjs/Hlsjs.css
@@ -1,7 +1,7 @@
 .select-container {
   position: relative;
   width: 150px;
-  float: right;
+  margin-left: auto;
 }
 
 .select-container select {
@@ -31,6 +31,7 @@
 
 .select-container select:hover {
   border-color: #888;
+  cursor: pointer;
 }
 
 .select-container select:focus {
